// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateEmailTemplate emailTemplates entity sdk promise fails calls toastr error 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity sdk promise fails returns updateEntityRejected 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "emailTemplates",
    "initialValues": Object {
      "email": "custom",
    },
    "type": "UPDATE_ENTITY_REJECTED",
    "values": Object {
      "email": "default",
    },
  },
]
`;

exports[`UpdateEmailTemplate emailTemplates entity unchanged default email calls toastr info 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "\\"Default Email\\" is unchanged. Nothing to submit.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity unchanged default email returns updateEntityRejected 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "emailTemplates",
    "type": "UPDATE_ENTITY_REJECTED",
  },
]
`;

exports[`UpdateEmailTemplate emailTemplates entity with custom email calls the correct sdk function 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "command": "createEmailTemplate",
        "data": Object {
          "active": true,
          "body": "mock body",
          "email": "custom",
          "emailTypeId": "mock entity id",
        },
        "module": "entities",
        "topic": "cxengage/entities/create-email-template-response",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity with custom email calls toastr success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Email Template was updated successfully!",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity with custom email returns updateEntityFulfilled 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "emailTemplates",
    "initialValues": Object {
      "email": "custom",
    },
    "response": "mock response",
    "type": "UPDATE_ENTITY_FULFILLED",
    "values": Object {
      "body": "mock body",
      "email": "custom",
    },
  },
]
`;

exports[`UpdateEmailTemplate emailTemplates entity with default email calls the correct sdk function 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "command": "updateEmailTemplate",
        "data": Object {
          "active": false,
          "emailTypeId": "mock entity id",
        },
        "module": "entities",
        "topic": "cxengage/entities/update-email-template-response",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity with default email calls toastr success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Email Template was updated successfully!",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateEmailTemplate emailTemplates entity with default email returns updateEntityFulfilled 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "emailTemplates",
    "initialValues": Object {
      "email": "custom",
    },
    "response": "mock response",
    "type": "UPDATE_ENTITY_FULFILLED",
    "values": Object {
      "body": "mock body",
      "email": "default",
    },
  },
]
`;
